--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Course---HTML-CSS-and-Javascript-for-Web-Developers" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/abhishekverma.github.io" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>HTML CSS JS for Web Developers</h3>
+											<h3>My Portfolio Website</h3>
 										</header>
 									</article>
 								</div>
