--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>I am writing to express my enthusiasm for starting a career as a software developer. I have gained valuable experience in Learning algorithms, working with data structures, and successfully completing object-oriented projects. Through these experiences, I have gained my skills in  C/C++, Java, Python, SQL, Shell script, and GitHub. Proficient in AIML (Artificial Intelligence Machine Learning) technical skills implementing complex programs and effectively debugging code.
-
+							<p>
+								I am a data enthusiast with a strong foundation in statistical analysis, data visualization, and data-driven decision-making. I hold a BE/CSE Degree in AIML Major from Chandigarh University, where I honed my analytical skills and gained a deep understanding of data manipulation and interpretation.
+								Skills I have SQL, Excel, Python, Power BI.
 								
 
 							</p>
@@ -97,9 +98,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Car-Gaming-Project" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Digital-Music-Store-Analysis" class="image fit"><img src="https://i.pinimg.com/736x/f0/89/fc/f089fcd2b1b51cecc5ef88e7eaeb837e.jpg" alt="" /></a>
 										<header>
-											<h3>Car Gaming Project</h3>
+											<h3>Digital Music Store Analysis</h3>
 										</header>
 									</article>
 								</div>
