--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 						<div class="container">
 
 							<header style="color: black; font-weight:900;">
-								<h2 class="alt"style="font-weight:900;">Hi! I'm <strong style="color: black; font-weight:900;">Abhishek Verma</strong>, a <a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;">BE Honors</a> in Computer Science<br />
-								with specialization in <a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;">AIML</a>.</h2>
+								<h2 class="alt"style="font-weight:900;"><strong style="color: black; font-weight:900;">Abhishek Verma</strong>, a <a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;">Business Analyst<br />
+								<a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;"></a>.</h2>
 								<p style="color: rgb(70, 70, 70);font-weight: 700;">I am someone who takes action rather than relying solely on planning.<br />
 									I firmly believe that with self-belief and confidence, you can achieve anything!</p>
 							</header>
