--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="container">
 
 							<header style="color: black; font-weight:900;">
-								<h2 class="alt"style="font-weight:900;"><strong style="color: black; font-weight:900;">Abhishek Verma</strong>, a <a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;">Business Analyst<br />
+								<h2 class="alt"style="font-weight:900;"><strong style="color: black; font-weight:900;">Abhishek Verma</strong><a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;"><br/>Business Analyst<br />
 								<a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;"></a>.</h2>
 								<p style="color: rgb(70, 70, 70);font-weight: 700;">I am someone who takes action rather than relying solely on planning.<br />
 									I firmly believe that with self-belief and confidence, you can achieve anything!</p>
@@ -83,7 +83,7 @@
 
 							<p>
 								I am a data enthusiast with a strong foundation in statistical analysis, data visualization, and data-driven decision-making. I hold a BE/CSE Degree in AIML Major from Chandigarh University, where I honed my analytical skills and gained a deep understanding of data manipulation and interpretation.
-								Skills I have SQL, Excel, Python, Power BI.
+								Skills I have Advance excel functions, PowerBI, data cleaning, regression analysis and scenario modeling.
 								
 
 							</p>
