--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<li><a href="https://www.instagram.com/__abhishekverma.__/" class="icon brands fa-instagram"><span class="label">Facebook</span></a></li>
 							<li><a href="https://github.com/abhishekvermacu20" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="https://mail.google.com/mail/u/3/#inbox" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://mail.google.com/mail/u/1/#inbox" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -60,8 +60,8 @@
 						<div class="container">
 
 							<header style="color: black; font-weight:900;">
-								<h2 class="alt"style="font-weight:900;"><strong style="color: black; font-weight:900;">Abhishek Verma</strong><a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;"><br/>Business Analyst<br />
-								<a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;"></a>.</h2>
+								<h2 class="alt"style="font-weight:900;"><strong style="color: black; font-weight:900;">Abhishek Verma</strong><a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;"><br/><strong style="color: black; font-weight:300;">Business Analyst<br />
+								<a href="https://www.cuchd.in/engineering/be-computer-science-engineering.php" style="color: black;"></a></h2>
 								<p style="color: rgb(70, 70, 70);font-weight: 700;">I am someone who takes action rather than relying solely on planning.<br />
 									I firmly believe that with self-belief and confidence, you can achieve anything!</p>
 							</header>
@@ -82,8 +82,8 @@
 							</header>
 
 							<p>
-								I am a data enthusiast with a strong foundation in statistical analysis, data visualization, and data-driven decision-making. I hold a BE/CSE Degree in AIML Major from Chandigarh University, where I honed my analytical skills and gained a deep understanding of data manipulation and interpretation.
-								Skills I have Advance excel functions, PowerBI, data cleaning, regression analysis and scenario modeling.
+								I am a data enthusiast with a strong foundation in statistical analysis, data visualization, and data-driven decision-making.Throughout my studies, I develop a stronge passion for data analysis and it's power to drive business decision,
+								My technical Skills include Advance excel functions, PowerBI, data cleaning, regression analysis and scenario modeling.
 								
 
 							</p>
@@ -92,23 +92,23 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Stock-Price-Prediction-Software" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Financial-Modeling" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Stock Price Prediction Software</h3>
+											<h3>Financial Modeling using Excel</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Digital-Music-Store-Analysis" class="image fit"><img src="https://i.pinimg.com/736x/f0/89/fc/f089fcd2b1b51cecc5ef88e7eaeb837e.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Bike-Sales-Dashboard" class="image fit"><img src="https://i.pinimg.com/736x/f0/89/fc/f089fcd2b1b51cecc5ef88e7eaeb837e.jpg" alt="" /></a>
 										<header>
-											<h3>Digital Music Store Analysis</h3>
+											<h3>Bike Sales Dashboard using Excel</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/An-Improve-Machine-Learning-Driven-Pneumonia-Detection-System" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Pneumonia Detection System</h3>
+											<h3>Spreadsheet Models</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -120,15 +120,15 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Spotify-Clone" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Energy-Consumptions-Dashboard" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Spotify Clone</h3>
+											<h3>Energy Consumptions Dashboard</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Machine-Learning---House-Prediction-System" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Super-Store-Sales-Dashboard" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>House Prediction System</h3>
+											<h3>Super Store Sales Dashboard</h3>
 										</header>
 									</article>
 								</div>
