--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Financial-Modeling" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Financial-Modeling" class="image fit"><img src="images/financial forecasting.jpg" alt="" /></a>
 										<header>
 											<h3>Financial Modeling using Excel</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Bike-Sales-Dashboard" class="image fit"><img src="https://i.pinimg.com/736x/f0/89/fc/f089fcd2b1b51cecc5ef88e7eaeb837e.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Bike-Sales-Dashboard" class="image fit"><img src="images/bike sales.jpg" alt="" /></a>
 										<header>
 											<h3>Bike Sales Dashboard using Excel</h3>
 										</header>
@@ -106,7 +106,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/spredsheet.jpg" alt="" /></a>
 										<header>
 											<h3>Spreadsheet Models</h3>
 										</header>
@@ -120,13 +120,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Energy-Consumptions-Dashboard" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Energy-Consumptions-Dashboard" class="image fit"><img src="images/energy consuption.jpg" alt="" /></a>
 										<header>
 											<h3>Energy Consumptions Dashboard</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/abhishekvermacu20/Super-Store-Sales-Dashboard" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="https://github.com/abhishekvermacu20/Super-Store-Sales-Dashboard" class="image fit"><img src="images/super store.jpg" alt="" /></a>
 										<header>
 											<h3>Super Store Sales Dashboard</h3>
 										</header>
